--- a/index.HTML
+++ b/index.HTML
@@ -13,57 +13,57 @@
 <body>
     <section class="game">        
         
-        <div class="memory-card" data-framework="saira-lagarta">
-            <img class="front-face" src="img/saira-lagarta.svg" alt="saira-lagarta" />
+        <div class="memory-card" data-framework="saira-douradinha">
+            <img class="front-face" src="img/saira-douradinha.svg" alt="saira-douradinha" />
             <img class="back-face" src="img/fundo-carta.svg" alt="memory Card"/>
         </div>
-        <div class="memory-card" data-framework="saira-lagarta">
-            <img class="front-face" src="img/saira-lagarta.svg" alt="saira-lagarta" />
+        <div class="memory-card" data-framework="saira-douradinha">
+            <img class="front-face" src="img/saira-douradinha.svg" alt="saira-douradinha" />
             <img class="back-face" src="img/fundo-carta.svg" alt="memory Card" />
         </div>
 
-        <div class="memory-card" data-framework="saira-sapucaia">
-            <img class="front-face" src="img/saira-sapucaia.svg" alt="saira-sapucaia" />
+        <div class="memory-card" data-framework="saira-ferrugem">
+            <img class="front-face" src="img/saira-ferrugem.svg" alt="saira-ferrugem" />
             <img class="back-face" src="img/fundo-carta.svg" alt="memory Card"/>
         </div>
-        <div class="memory-card" data-framework="saira-sapucaia">
-            <img class="front-face" src="img/saira-sapucaia.svg" alt="saira-sapucaia" />
+        <div class="memory-card" data-framework="saira-ferrugem">
+            <img class="front-face" src="img/saira-ferrugem.svg" alt="saira-ferrugem" />
             <img class="back-face" src="img/fundo-carta.svg" alt="memory Card" />
         </div>
 
-        <div class="memory-card" data-framework="policia-inglesa-do-sul">
-            <img class="front-face" src="img/policia-inglesa-do-sul.svg" alt="policia-inglesa-do-sul" />
+        <div class="memory-card" data-framework="saira-militar">
+            <img class="front-face" src="img/saira-militar.svg" alt="saira-militar" />
             <img class="back-face" src="img/fundo-carta.svg" alt="memory Card" />
         </div>
-        <div class="memory-card" data-framework="policia-inglesa-do-sul">
-            <img class="front-face" src="img/policia-inglesa-do-sul.svg" alt="policia-inglesa-do-sul" />
-            <img class="back-face" src="img/fundo-carta.svg" alt="memory Card" />
-        </div>
-
-        <div class="memory-card" data-framework="arara-azul">
-            <img class="front-face" src="img/arara-azul.svg" alt="arara-azul" />
-            <img class="back-face" src="img/fundo-carta.svg" alt="memory Card" />
-        </div>
-        <div class="memory-card" data-framework="arara-azul">
-            <img class="front-face" src="img/arara-azul.svg" alt="arara-azul" />
+        <div class="memory-card" data-framework="saira-militar">
+            <img class="front-face" src="img/saira-militar.svg" alt="saira-militar" />
             <img class="back-face" src="img/fundo-carta.svg" alt="memory Card" />
         </div>
 
-        <div class="memory-card" data-framework="beija-flor-de-fronte-violeta">
-            <img class="front-face" src="img/beija-flor-de-fronte-violeta.svg" alt="beija-flor-de-fronte-violeta" />
+        <div class="memory-card" data-framework="saira-preciosa">
+            <img class="front-face" src="img/saira-preciosa.svg" alt="saira-preciosa" />
             <img class="back-face" src="img/fundo-carta.svg" alt="memory Card" />
         </div>
-        <div class="memory-card" data-framework="beija-flor-de-fronte-violeta">
-            <img class="front-face" src="img/beija-flor-de-fronte-violeta.svg" alt="beija-flor-de-fronte-violeta" />
+        <div class="memory-card" data-framework="saira-preciosa">
+            <img class="front-face" src="img/saira-preciosa.svg" alt="saira-preciosa" />
             <img class="back-face" src="img/fundo-carta.svg" alt="memory Card" />
         </div>
 
-        <div class="memory-card" data-framework="beija-flor-de-garganta-verde">
-            <img class="front-face" src="img/beija-flor-de-garganta-verde.svg" alt="beija-flor-de-garganta-verde"/>
+        <div class="memory-card" data-framework="saira-sete-cores">
+            <img class="front-face" src="img/saira-sete-cores.svg" alt="saira-sete-cores" />
+            <img class="back-face" src="img/fundo-carta.svg" alt="memory Card" />
+        </div>
+        <div class="memory-card" data-framework="saira-sete-cores">
+            <img class="front-face" src="img/saira-sete-cores.svg" alt="saira-sete-cores" />
+            <img class="back-face" src="img/fundo-carta.svg" alt="memory Card" />
+        </div>
+
+        <div class="memory-card" data-framework="saira-viuva">
+            <img class="front-face" src="img/saira-viuva.svg" alt="saira-viuva"/>
             <img class="back-face" src="img/fundo-carta.svg" alt="memory Card"/>
         </div>
-        <div class="memory-card" data-framework="beija-flor-de-garganta-verde">
-            <img class="front-face" src="img/beija-flor-de-garganta-verde.svg" alt="beija-flor-de-garganta-verde"/>
+        <div class="memory-card" data-framework="saira-viuva">
+            <img class="front-face" src="img/saira-viuva.svg" alt="saira-viuva"/>
             <img class="back-face" src="img/fundo-carta.svg" alt="memory Card" />
         </div>
     </section>
